# open-electricity-data-toolkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_quickstart.ipynb
examples/data/metadata/: collection_log.parquet
examples/data/raw/aeso/demand/: 2024.parquet
examples/data/raw/aeso/prices/: 2024.parquet
src/elec_data/: __init__.py  toolkit.py
src/elec_data/collectors/: __init__.py  base.py  gridstatus_collector.py
src/elec_data/harmonize/: __init__.py  schemas.py
src/elec_data/registry/: __init__.py  market_registry.json  markets.py
src/elec_data/storage/: __init__.py  collection_log.py  parquet_store.py
tests/: conftest.py  test_collection_log.py  test_gridstatus_collector.py  test_market_registry.py  test_parquet_store.py  test_schemas.py  test_toolkit.py
