[project]
name = "elec-data"
version = "0.1.0"
description = "Electricity market data toolkit — collect, store, harmonize, query"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "gridstatus>=0.29",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "tqdm>=4.64",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
]
viz = [
    "plotly>=5.0",
    "jupyter",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires network or external services"]
